# BasePython

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  engine.py  plane.py
homework_03/: Dockerfile  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_03/web-app/: main.py
homework_04/templates/: about.html  base.html  index.html
homework_05/: app.py  pyproject.toml
homework_06/: Dockerfile  app.py  docker-compose.yaml  postgres.env  prestart.sh  requirements.txt  uwsgi.ini
homework_06/migrations/versions/: fcfa9d4366e9_.py
homework_06/models/: __init__.py  library.py
homework_06/views/: library.py
