[tool.poetry]
name = "homework_05"
version = "0.1.0"
description = ""
authors = ["Igor Muhutdinov <igor.muhutdinov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
